# download-organiser

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  rules.yml.sample
