[package]
name = "download-organiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
inotify = "0.10"
log = { version = "0.4", features = ["std", "serde", "kv_unstable_std", "kv_unstable_serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_yaml = "0.9"
std-logger = "0.5"
tokio = { version = "1.33", features = ["full"] }
tokio-stream = "0.1"
zip = "0.6"
